@@ -22,7 +22,7 @@ plugins {
     id "org.springframework.boot" version "${spring_boot_version}"
     id "com.google.cloud.tools.jib" version "2.8.0"
     id "com.github.node-gradle.node" version "3.0.1"
-    id "com.diffplug.spotless" version "5.11.0"
+    id "com.diffplug.spotless" version "5.11.1"
     // this allows us to find outdated dependencies via ./gradlew dependencyUpdates
     id "com.github.ben-manes.versions" version "0.38.0"
 }
@@ -86,6 +86,7 @@ test {
     }
     testLogging.showStandardStreams = true
     reports.html.enabled = false
+    jvmArgs "--illegal-access=warn"
 }
 
 task integrationTest(type: Test) {
@@ -99,7 +100,7 @@ task integrationTest(type: Test) {
     }
 
     maxHeapSize = "1024m"
-    jvmArgs "-XX:MaxPermSize=512m"
+    jvmArgs "-XX:MaxPermSize=512m --illegal-access=warn"
     reports.html.enabled = false
 }
 
@@ -339,7 +340,7 @@ tasks.withType(Test) {
 }
 
 wrapper {
-    gradleVersion = "6.8.3"
+    gradleVersion = "7.0-rc-1"
 }
 
 task stage(dependsOn: "bootWar") {
